Correction padding on mobile

--- a/src/blocks/brief/__container/brief__container.css
+++ b/src/blocks/brief/__container/brief__container.css
@@ -2,3 +2,9 @@
   padding-top: 6rem;
   color: var(--main-text-color);
 }
+
+@media (max-width: 520px){
+  .brief__container{
+    padding-top: 3rem;
+  }
+}
